Fix margin and spacing issue.

--- a/public/css/additional_style.css
+++ b/public/css/additional_style.css
@@ -62,3 +62,9 @@
 .external-links img {
     display: inline;
 }
+
+.no-margin-here,
+.no-margin-here p,
+ #no-margin-here{
+    margin: 0;
+}
